Agregado por user y no un test

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <button onclick="suma_resta_Vectores()">Suma o resta de vectores</button>
-    <button onclick="multiplicacionMatricesTest()">Multiplicacion matrices (AxB)</button>
+    <button onclick="multiplicacionMatrices()">Multiplicacion matrices (AxB)</button>
     <button onclick="leyAsociativa()">Ley asociativa(AB)C = A(BC)</button>
     <br>
     <h2 for="">Es un borrador , falta un mejor diseño a la hora de ingresar y mostrar informacion</h2>
